--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,10 @@ services:
       - 10000:27017
     volumes:
       - mongo:/data/db
+  rabbitmq:
+    image: rabbitmq
+    restart: always
+    ports:
+      - 10001:5672
 volumes:
   mongo:
