--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
+      - name: shut down app as we lack resources
+        run: docker-compose down
       - name: build
         run: mvn clean install -DskipTests
       - name: deploy
