--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
       authentication-database: admin
   rabbitmq:
     host: rabbitmq
+  servlet:
+    multipart:
+      max-file-size: 10MB
 main:
   telegram-bot:
     username: FoodAnalysisBot
