--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: .
     restart: always
+    ports:
+      - 80:8080
   mongo:
     image: mongo
     restart: always
